--- a/renovate.json
+++ b/renovate.json
@@ -8,5 +8,6 @@
   "prConcurrentLimit": 0,
   "separateMinorPatch": false,
   "separateMajorMinor": false,
-  "separateMultipleMajor": false
+  "separateMultipleMajor": false,
+  "lockFileMaintenance": true
 }
