--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,11 @@
 {
-  "extends": ["config:base", "group:allNonMajor"],
+  "extends": ["group:allNonMajor"],
   "commitMessageTopic": "all npm packages",
   "reviewers": ["t-yng"],
   "timezone": "Asia/Tokyo",
   "rangeStrategy": "bump",
   "prHourlyLimit": 0,
   "prConcurrentLimit": 0,
-  "separateMultipleMajor": false
+  "separateMultipleMajor": false,
+  "lockFileMaintenance": true
 }
