--- a/renovate.json
+++ b/renovate.json
@@ -8,37 +8,8 @@
   "separateMultipleMajor": false,
   "lockFileMaintenance": false,
   "recreateClosed": false,
+  "prBodyColumns": ["Type", "Update", "Package", "Change"],
   "packageRules": [
-    {
-      "matchDepTypes": ["dependencies"],
-      "matchUpdateTypes": ["major"],
-      "prPriority": 5
-    },
-    {
-      "matchDepTypes": ["dependencies"],
-      "matchUpdateTypes": ["minor"],
-      "prPriority": 4
-    },
-    {
-      "matchDepTypes": ["dependencies"],
-      "matchUpdateTypes": ["patch"],
-      "prPriority": 3
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["major"],
-      "prPriority": 2
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["minor"],
-      "prPriority": 1
-    },
-    {
-      "matchDepTypes": ["devDependencies"],
-      "matchUpdateTypes": ["patch"],
-      "prPriority": 0
-    },
     {
       "matchPackagePatterns": ["*"],
       "matchUpdateTypes": ["major", "minor", "patch"],
